--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -42,8 +42,8 @@ header a {
 main {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-}
+  align-items: center;
+  }
 
 .mission {
   display: flex;
@@ -74,8 +74,41 @@ main {
   margin-top: 15px;
 }
 
-
 .month {
   display: flex;
+  flex-direction: column;
+  width: 1000px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40px;
+  border: 1px white solid;
+}
 
+.month-top {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px white solid;
+}
+
+.month-images {
+  border: 1px white solid;
+  display: flex;
+  align-items: center;
+  width: 1000px;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.month img {
+  height: 200px;
+  width: 300px;
+}
+
+.img-box {
+  border: 1px white solid;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
